snander (1.7.8-1) UNRELEASED; urgency=medium

  * Update libusb version to v1.0.26.
  * Add GD25F256F SPI NOR Flash support.
  * Add W25Q64JVIM SPI NOR Flash support.
  * Add MX25L4005A SPI NOR Flash support.
  * Add -k option to skip BAD blocks or pages when reading and writing NAND flash.
  * Add M25P05/M25P10/M25P20/M25P40/M25P80/M25P32/M25P64/N25Q016A/N25Q512A SPI NOR Flash support.
  * Add P25D05H/P25D10H/P25D20H/P25D40H/P25D80H/PY25Q128HA SPI NOR Flash support.
  * Add some SPI NOR Flash from EXCELSEMI/ONSEMI/PCT Manufacturers.
  * Add FORESEE FS35ND01GS1Y2 SPI NAND Flash support.
  * Add DS DS35M1GA/DS35M2GA SPI NAND Flash support.
  * Add ESMT F50D1G41LB(2M) SPI NAND Flash support.
  * Add MXIC MX35LF2G14AC SPI NAND Flash support.
  * Add WINBOND W25N01GW SPI NAND Flash support.
  * Fix print size in KB when size is less than 1MB.
  * Fix when SPI_NAND_FLASH_DEBUG is enabled.

 -- McMCC <mcmcc@mail.ru>  Thu, 28 Dec 2023 21:00:00 +0800