@@ -264,90 +264,92 @@ SPI NAND Flash Support List:
 004. GIGADEVICE GD5F1GQ4UE
 005. GIGADEVICE GD5F1GQ5UE
 006. GIGADEVICE GD5F1GQ5RE
-007. GIGADEVICE GD5F2GQ4UB
-008. GIGADEVICE GD5F2GQ4UE
-009. GIGADEVICE GD5F2GQ4UC
-010. GIGADEVICE GD5F4GQ4UB
-011. GIGADEVICE GD5F4GQ4UC
-012. ESMT F50D1G41LB(2M)
-013. ESMT F50L512
-014. ESMT F50L1G
-015. ESMT F50L1G41LB
-016. ESMT F50L2G41LB
-017. WINBOND W25N01GV
-018. WINBOND W25N01GW
-019. WINBOND W25N02KV
-020. WINBOND W25M02GV
-021. MXIC MX35LF1GE4AB
-022. MXIC MX35LF2GE4AB
-023. MXIC MX35LF2G14AC
-024. MXIC MX35LF2GE4AD
-025. ZENTEL A5U12A21ASC
-026. ZENTEL A5U1GA21BWS
-027. ETRON EM73C044SNB
-028. ETRON EM73C044SND
-029. ETRON EM73C044SNF
-030. ETRON EM73C044VCA
-031. ETRON EM73C044VCD
-032. ETRON EM73D044VCA
-033. ETRON EM73D044VCB
-034. ETRON EM73D044VCD
-035. ETRON EM73D044VCG
-036. ETRON EM73D044VCH
-037. ETRON EM73D044SNA
-038. ETRON EM73D044SNC
-039. ETRON EM73D044SND
-040. ETRON EM73D044SNF
-041. ETRON EM73E044SNA
-042. TOSHIBA TC58CVG0S3H
-043. TOSHIBA TC58CVG1S3H
-044. TOSHIBA TC58CVG2S0H
-045. KIOXIA TC58CVG2S0HRAIJ
-046. MICRON MT29F1G01
-047. MICRON MT29F2G01
-048. MICRON MT29F4G01
-049. HEYANG HYF1GQ4UAACAE
-050. HEYANG HYF2GQ4UAACAE
-051. HEYANG HYF2GQ4UHCCAE
-052. HEYANG HYF1GQ4UDACAE
-053. HEYANG HYF2GQ4UDACAE
-054. PN PN26G01A-X
-055. PN PN26G02A-X
-056. PN PN26Q01A-X
-057. ATO ATO25D1GA
-058. ATO ATO25D2GA
-059. ATO ATO25D2GB
-060. FM FM25S01
-061. FM FM25S01A
-062. FM FM25G01B
-063. FM FM25G02B
-064. FM FM25G02C
-065. FM FM25G02
-066. XTX XT26G02B
-067. XTX XT26G01C
-068. XTX XT26G01A
-069. XTX XT26G02A
-070. MIRA PSU1GS20BN
-071. BIWIN BWJX08U
-072. BIWIN BWET08U
-073. FORESEE FS35ND01GD1F1
-074. FORESEE FS35ND01GS1F1
-075. FORESEE FS35ND02GS2F1
-076. FORESEE FS35ND02GD1F1
-077. FORESEE FS35ND01GS1Y2
-078. FORESEE FS35ND02G-S3Y2
-079. FORESEE FS35ND04G-S2Y2
-080. DS DS35Q2GA
-081. DS DS35M2GA
-082. DS DS35Q1GA
-083. DS DS35M1GA
-084. FISON CS11G0T0A0AA
-085. FISON CS11G1T0A0AA
-086. FISON CS11G0G0A0AA
-087. TYM TYM25D2GA01
-088. TYM TYM25D2GA02
-089. TYM TYM25D1GA03
-090. XINCUN XCSP1AAWH-NT
+007. GIGADEVICE GD5F2GQ5UE
+008. GIGADEVICE GD5F2GQ5RE
+009. GIGADEVICE GD5F2GQ4UB
+010. GIGADEVICE GD5F2GQ4UE
+011. GIGADEVICE GD5F2GQ4UC
+012. GIGADEVICE GD5F4GQ4UB
+013. GIGADEVICE GD5F4GQ4UC
+014. ESMT F50D1G41LB(2M)
+015. ESMT F50L512
+016. ESMT F50L1G
+017. ESMT F50L1G41LB
+018. ESMT F50L2G41LB
+019. WINBOND W25N01GV
+020. WINBOND W25N01GW
+021. WINBOND W25N02KV
+022. WINBOND W25M02GV
+023. MXIC MX35LF1GE4AB
+024. MXIC MX35LF2GE4AB
+025. MXIC MX35LF2G14AC
+026. MXIC MX35LF2GE4AD
+027. ZENTEL A5U12A21ASC
+028. ZENTEL A5U1GA21BWS
+029. ETRON EM73C044SNB
+030. ETRON EM73C044SND
+031. ETRON EM73C044SNF
+032. ETRON EM73C044VCA
+033. ETRON EM73C044VCD
+034. ETRON EM73D044VCA
+035. ETRON EM73D044VCB
+036. ETRON EM73D044VCD
+037. ETRON EM73D044VCG
+038. ETRON EM73D044VCH
+039. ETRON EM73D044SNA
+040. ETRON EM73D044SNC
+041. ETRON EM73D044SND
+042. ETRON EM73D044SNF
+043. ETRON EM73E044SNA
+044. TOSHIBA TC58CVG0S3H
+045. TOSHIBA TC58CVG1S3H
+046. TOSHIBA TC58CVG2S0H
+047. KIOXIA TC58CVG2S0HRAIJ
+048. MICRON MT29F1G01
+049. MICRON MT29F2G01
+050. MICRON MT29F4G01
+051. HEYANG HYF1GQ4UAACAE
+052. HEYANG HYF2GQ4UAACAE
+053. HEYANG HYF2GQ4UHCCAE
+054. HEYANG HYF1GQ4UDACAE
+055. HEYANG HYF2GQ4UDACAE
+056. PN PN26G01A-X
+057. PN PN26G02A-X
+058. PN PN26Q01A-X
+059. ATO ATO25D1GA
+060. ATO ATO25D2GA
+061. ATO ATO25D2GB
+062. FM FM25S01
+063. FM FM25S01A
+064. FM FM25G01B
+065. FM FM25G02B
+066. FM FM25G02C
+067. FM FM25G02
+068. XTX XT26G02B
+069. XTX XT26G01C
+070. XTX XT26G01A
+071. XTX XT26G02A
+072. MIRA PSU1GS20BN
+073. BIWIN BWJX08U
+074. BIWIN BWET08U
+075. FORESEE FS35ND01GD1F1
+076. FORESEE FS35ND01GS1F1
+077. FORESEE FS35ND02GS2F1
+078. FORESEE FS35ND02GD1F1
+079. FORESEE FS35ND01GS1Y2
+080. FORESEE FS35ND02G-S3Y2
+081. FORESEE FS35ND04G-S2Y2
+082. DS DS35Q2GA
+083. DS DS35M2GA
+084. DS DS35Q1GA
+085. DS DS35M1GA
+086. FISON CS11G0T0A0AA
+087. FISON CS11G1T0A0AA
+088. FISON CS11G0G0A0AA
+089. TYM TYM25D2GA01
+090. TYM TYM25D2GA02
+091. TYM TYM25D1GA03
+092. XINCUN XCSP1AAWH-NT
 
 SPI NOR Flash Support List:
 001. AT26DF161
